--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,1 +1,1 @@
-<app-hero *ngFor="let hero of heroes" [hero]="hero"></app-hero>
+<app-hero *ngFor="let hero of heroes; trackBy: trackByIndex" [hero]="hero"></app-hero>
