--- a/src/app/components/dynamics/dynamic/dynamic.component.html
+++ b/src/app/components/dynamics/dynamic/dynamic.component.html
@@ -1,1 +1,1 @@
-<app-dynamic-host [entity]="entity" [ngxComponentOutlet]="component"></app-dynamic-host>
+<app-dynamic-host [ngxComponentOutlet]="component" [entity]="entity"></app-dynamic-host>
