Migrate to angular 6, added basic table

--- a/src/app/containers/entities/entities.component.html
+++ b/src/app/containers/entities/entities.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <h1>Demo</h1>
+    <h1>Dynamic Heroes Example</h1>
 </mat-toolbar>
 
 <app-dynamics [entities]="entities$ | async"></app-dynamics>
