--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -4,6 +4,9 @@
             <img class="angular-logo" src="/assets/img/angular-white-transparent.svg" alt="Angular">
             NgxComponentOutlet
         </a>
+        <a mat-button routerLink="/">Heroes</a>
+        <a mat-button routerLink="/table">Table</a>
+        <a mat-button routerLink="/forms">Forms</a>
         <span class="spacer"></span>
         <a mat-button href="https://github.com/thekiba/ngx-component-outlet-demo">
             <img class="github-logo" src="/assets/img/github-circle-white-transparent.svg" target="_blank" alt="NgxComponentOutlet">
