--- a/src/app/components/entities/hero/hero.component.scss
+++ b/src/app/components/entities/hero/hero.component.scss
@@ -1,24 +1,7 @@
+@import 'assets/styles/hero.scss';
+
 $width: 500px;
 $height: 600px;
-
-$archer_image: "/assets/img/hero/archer.png";
-$knight_image: "/assets/img/hero/knight.png";
-$wizard_image: "/assets/img/hero/wizard.png";
-
-.archer-icon {
-    background-image: url($archer_image);
-    background-size: cover;
-}
-
-.knight-icon {
-    background-image: url($knight_image);
-    background-size: cover;
-}
-
-.wizard-icon {
-    background-image: url($wizard_image);
-    background-size: cover;
-}
 
 .mat-card-image {
     height: $height;
