Added basic dynamic component for forms

--- a/src/app/containers/table/table.component.html
+++ b/src/app/containers/table/table.component.html
@@ -2,12 +2,28 @@
     <h1>Dynamic Table Example</h1>
 </mat-toolbar>
 
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Basic Table</mat-card-title>
-        <mat-card-subtitle>with dynamic components</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <app-table [columns]="columns" [dataSource]="dataSource" [displayedColumns]="displayedColumns"></app-table>
-    </mat-card-content>
-</mat-card>
+<mat-grid-list [cols]="7" rowHeight="500px">
+    <mat-grid-tile [colspan]="3">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Basic Table</mat-card-title>
+                <mat-card-subtitle>with dynamic components</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <app-dynamic-table [schema]="schema$ | async" [dataSource]="dataSource" [displayedColumns]="displayedColumns"></app-dynamic-table>
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="4">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Table Schema</mat-card-title>
+                <mat-card-subtitle>with dynamic forms</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <app-table-schema [schema]="schema$ | async" (schemaChange)="onSchemaChanged($event)"></app-table-schema>
+            </mat-card-content>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
+
