--- a/src/app/components/dynamic-table/dynamic-table-column/dynamic-table-column.component.html
+++ b/src/app/components/dynamic-table/dynamic-table-column/dynamic-table-column.component.html
@@ -1,2 +1,4 @@
-<app-dynamic-table-column-host [ngxComponentOutlet]="column | resolve: resolver"
-                               [column]="column" [row]="row"></app-dynamic-table-column-host>
+<app-dynamic-table-column-host
+    [ngxComponentOutlet]="column | resolve: resolver"
+    [column]="column" [row]="row"
+></app-dynamic-table-column-host>
