--- a/src/app/components/forms/controls/textbox/textbox.component.html
+++ b/src/app/components/forms/controls/textbox/textbox.component.html
@@ -1,3 +1,4 @@
 <mat-form-field>
     <input matInput [formControl]="control" [placeholder]="schema.label">
 </mat-form-field>
+<mat-error *ngIf="control.invalid">{{ control.errors | json }}</mat-error>
