Added more dynamics for demo

--- a/src/app/components/form/groups/group.component.html
+++ b/src/app/components/form/groups/group.component.html
@@ -1,4 +1,7 @@
-<h3 mat-line>{{ schema.label || 'Unknown' }}</h3>
+<h3 mat-line>
+    {{ schema.label || 'Unknown' }}
+    <small *ngIf="schema.subtitle" mat-subheader>{{ schema.subtitle }}</small>
+</h3>
 <app-dynamic-form
     *ngFor="let control of toArray(schema.controls); trackBy: trackByKey"
     [form]="group.get(control.key)" [schema]="control"
