--- a/src/app/components/form/arrays/array.component.html
+++ b/src/app/components/form/arrays/array.component.html
@@ -1,5 +1,6 @@
-<mat-grid-list *ngIf="schema.controls.length > 0" [cols]="schema.controls.length" rowHeight="290px" gutterSize="20px">
-    <mat-grid-tile *ngFor="let control of schema.controls; trackBy: trackByIndex; index as index">
+<div *ngIf="schema.controls.length > 0" fxLayout="row" fxLayoutGap="20px">
+    <h2 mat-line>{{ schema.label || 'Unknown' }}</h2>
+    <ng-container *ngFor="let control of schema.controls; trackBy: trackByIndex; index as index">
         <app-dynamic-form [form]="array.at(index)" [schema]="control"></app-dynamic-form>
-    </mat-grid-tile>
-</mat-grid-list>
+    </ng-container>
+</div>
