--- a/src/app/schemas/entity-schema/entity-schema-modal.component.html
+++ b/src/app/schemas/entity-schema/entity-schema-modal.component.html
@@ -3,7 +3,7 @@
         <h1 mat-dialog-title>Hero</h1>
     </mat-card-header>
     <mat-card-content mat-dialog-content>
-        <app-entity-schema [(schema)]="schema" (invalid)="invalid = $event"></app-entity-schema>
+        <app-entity-schema [schema]="defaultSchema" (schemaChange)="schema = $event" (invalid)="invalid = $event"></app-entity-schema>
     </mat-card-content>
     <mat-card-actions mat-dialog-actions>
         <button mat-button mat-dialog-close>No Thanks</button>
