--- a/src/app/components/entities/item/item.component.html
+++ b/src/app/components/entities/item/item.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card *ngIf="item">
     <mat-card-header>
         <div [ngClass]="item.icon" mat-card-avatar></div>
         <mat-card-title>{{ item.name }}</mat-card-title>
