--- a/src/app/containers/entities/entities.component.html
+++ b/src/app/containers/entities/entities.component.html
@@ -2,4 +2,5 @@
     <h1>Dynamic Heroes Example</h1>
 </mat-toolbar>
 
-<app-dynamic-entities [entities]="entities$ | async"></app-dynamic-entities>
+<input type="text" [(ngModel)]="name">
+<app-dynamic-entities [entities]="entities$ | async" (action)="onAction($event)" [name]="name"></app-dynamic-entities>
