--- a/src/app/dynamics/dynamic-entities/dynamic-entities.component.html
+++ b/src/app/dynamics/dynamic-entities/dynamic-entities.component.html
@@ -1,10 +1,4 @@
-<!--<ng-container *ngFor="let entity of entities; trackBy: trackById">-->
-    <!--<app-dynamic-entity [entity]="entity"></app-dynamic-entity>-->
-<!--</ng-container>-->
-
-
 <ng-container *ngFor="let entity of entities; trackBy: trackById">
-    <input #input>
-    <ng-container *ngxComponentOutlet="resolver | resolve: entity; context: { entity: entity, forInput: input.value }"></ng-container>
-    <!--<app-dynamic-entity [entity]="entity"></app-dynamic-entity>-->
+    <app-dynamic-entity [entity]="entity" (action)="action.emit($event)"></app-dynamic-entity>
 </ng-container>
+
